--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -318,17 +318,17 @@
       </property>
      </widget>
     </widget>
-    <widget class="QCheckBox" name="checkBox_17">
+    <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>20</y>
-       <width>151</width>
-       <height>22</height>
+       <x>110</x>
+       <y>17</y>
+       <width>141</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string>label</string>
      </property>
     </widget>
    </widget>
@@ -1025,6 +1025,54 @@
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
+   </widget>
+   <widget class="QSplitter" name="splitter_10">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>0</width>
+      <height>0</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QSplitter" name="splitter_19">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>0</width>
+      <height>0</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>2</width>
+      <height>2</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout"/>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>2</width>
+      <height>2</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
